--- a/package.json
+++ b/package.json
@@ -31,7 +31,13 @@
     "@angular/router": "^20.3.0",
     "@tailwindcss/postcss": "^4.1.13",
     "animejs": "^4.1.4",
+    "chart.js": "^4.5.1",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "flowbite": "^3.1.2",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
+    "ng2-charts": "^8.0.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.13",
@@ -41,7 +47,9 @@
     "@angular/build": "^20.3.2",
     "@angular/cli": "^20.3.2",
     "@angular/compiler-cli": "^20.3.0",
+    "@types/exceljs": "^0.5.3",
     "@types/jasmine": "~5.1.0",
+    "@types/jspdf": "^1.3.3",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
