--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ng2-charts": "^8.0.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.13",
     "tslib": "^2.3.0"
   },
