--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@angular/build": "^20.3.2",
-    "@angular/cli": "^20.3.2",
+    "@angular/build": "^21.0.0",
+    "@angular/cli": "^21.0.0",
     "@angular/compiler-cli": "^21.0.0",
     "@types/exceljs": "^0.5.3",
     "@types/jasmine": "~5.1.0",
@@ -59,6 +59,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.5.3",
     "typescript": "~5.9.2"
   }
 }
