--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,9 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Environment files (sensitive data)
+.env
+.env.local
+.env.production
+.env.*.local
