--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "cursos",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "security:clean-logs": "node scripts/remove-sensitive-logs.js",
+    "security:audit": "npm run security:clean-logs"
   },
   "prettier": {
     "printWidth": 100,
